--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ce26d7c6a32f56a6eec3ea7378cb622dadb877bb0dde6ab61ea2cfcbda5b92d8
+-- hash: 32c51f92a03cdff683c2d5a0b0e9e7dd3fa63085c9131c2953e5f51d2137e97c
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -33,13 +33,18 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
+    , dotenv
+    , lens
+    , mtl
     , network
     , raw-strings-qq
     , scalpel
     , sqlite-simple
     , text
+    , wreq
   default-language: Haskell2010
 
 executable criterion-scraper-exe
@@ -50,14 +55,19 @@ executable criterion-scraper-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , criterion-scraper
+    , dotenv
+    , lens
+    , mtl
     , network
     , raw-strings-qq
     , scalpel
     , sqlite-simple
     , text
+    , wreq
   default-language: Haskell2010
 
 test-suite criterion-scraper-test
@@ -69,12 +79,17 @@ test-suite criterion-scraper-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , criterion-scraper
+    , dotenv
+    , lens
+    , mtl
     , network
     , raw-strings-qq
     , scalpel
     , sqlite-simple
     , text
+    , wreq
   default-language: Haskell2010
