--- a/package.yaml
+++ b/package.yaml
@@ -21,12 +21,17 @@ description: Please see the README on GitHub at <https://github.com/githubuser/c
 
 dependencies:
   - base >= 4.7 && < 5
-  - scalpel
+  - aeson
   - bytestring
+  - dotenv
+  - lens
+  - mtl
   - network
   - raw-strings-qq
+  - scalpel
   - sqlite-simple
   - text
+  - wreq
 
 library:
   source-dirs: src
