--- a/package.yaml
+++ b/package.yaml
@@ -1,23 +1,9 @@
 name: criterion-scraper
 version: 0.1.0.0
-github: "githubuser/criterion-scraper"
-license: BSD3
-author: "Author name here"
-maintainer: "example@example.com"
-copyright: "2020 Author name here"
 
 extra-source-files:
   - README.md
   - ChangeLog.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/githubuser/criterion-scraper#readme>
 
 dependencies:
   - base >= 4.7 && < 5
@@ -26,12 +12,16 @@ dependencies:
   - dotenv
   - lens
   - mtl
-  - network
+  - postgresql-simple
   - raw-strings-qq
   - scalpel
-  - sqlite-simple
+  - sqlite-simple # TODO: Delete
   - text
-  - wreq
+
+default-extensions:
+  - BlockArguments
+  - LambdaCase
+  - OverloadedStrings
 
 library:
   source-dirs: src
