--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a2fc7b44f18779ed8ca333d79ba848031ba8ed59e3bd43ce00a246897488d921
+-- hash: 76f5d1ad4e44e1df18f2237311b78e18d9c4d83f65040824abb15265f5076457
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -17,6 +17,8 @@ extra-source-files:
 
 library
   exposed-modules:
+      Lib
+      Main
       Scraper
       Scraper.API
       Scraper.Database
@@ -30,29 +32,6 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
-    , dotenv
-    , lens
-    , mtl
-    , postgresql-simple
-    , raw-strings-qq
-    , scalpel
-    , sqlite-simple
-    , text
-  default-language: Haskell2010
-
-executable criterion-scraper-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_criterion_scraper
-  hs-source-dirs:
-      app
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NoImplicitPrelude OverloadedStrings
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , base >=4.7 && <5
-    , bytestring
-    , criterion-scraper
     , dotenv
     , lens
     , mtl
