--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 76f5d1ad4e44e1df18f2237311b78e18d9c4d83f65040824abb15265f5076457
+-- hash: 161dc84c02a9fa7c305c75e78163f05a52db0d7d18d7718dd6207a6320276c52
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -17,12 +17,12 @@ extra-source-files:
 
 library
   exposed-modules:
-      Lib
-      Main
-      Scraper
-      Scraper.API
-      Scraper.Database
-      Scraper.Movie
+      CriterionScraper.Lib
+      CriterionScraper.Main
+      CriterionScraper.Scraper
+      CriterionScraper.Scraper.API
+      CriterionScraper.Scraper.Database
+      CriterionScraper.Scraper.Movie
   other-modules:
       Paths_criterion_scraper
   hs-source-dirs:
@@ -32,6 +32,29 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
+    , dotenv
+    , lens
+    , mtl
+    , postgresql-simple
+    , raw-strings-qq
+    , scalpel
+    , sqlite-simple
+    , text
+  default-language: Haskell2010
+
+executable criterion-scraper
+  main-is: Main.hs
+  other-modules:
+      Paths_criterion_scraper
+  hs-source-dirs:
+      ./app
+  default-extensions: BlockArguments FlexibleContexts LambdaCase NoImplicitPrelude OverloadedStrings
+  ghc-options: -threaded -O "-with-rtsopts=-N"
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , criterion-scraper
     , dotenv
     , lens
     , mtl
