--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,13 @@ default-extensions:
 library:
   source-dirs: src
 
+executables:
+  criterion-scraper:
+    dependencies: criterion-scraper
+    ghc-options: -threaded -O "-with-rtsopts=-N"
+    source-dirs: "./app"
+    main: Main.hs
+
 tests:
   criterion-scraper-test:
     main: Spec.hs
