--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 161dc84c02a9fa7c305c75e78163f05a52db0d7d18d7718dd6207a6320276c52
+-- hash: fa747fe933200a17ef4c4d55026a8ff0c4be6d111d1a0dc0df9fc50182fca598
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -17,6 +17,7 @@ extra-source-files:
 
 library
   exposed-modules:
+      CriterionScraper.API
       CriterionScraper.Lib
       CriterionScraper.Main
       CriterionScraper.Scraper
@@ -27,7 +28,7 @@ library
       Paths_criterion_scraper
   hs-source-dirs:
       src
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NoImplicitPrelude OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -38,7 +39,6 @@ library
     , postgresql-simple
     , raw-strings-qq
     , scalpel
-    , sqlite-simple
     , text
   default-language: Haskell2010
 
@@ -48,7 +48,7 @@ executable criterion-scraper
       Paths_criterion_scraper
   hs-source-dirs:
       ./app
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NoImplicitPrelude OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
   ghc-options: -threaded -O "-with-rtsopts=-N"
   build-depends:
       aeson
@@ -61,7 +61,6 @@ executable criterion-scraper
     , postgresql-simple
     , raw-strings-qq
     , scalpel
-    , sqlite-simple
     , text
   default-language: Haskell2010
 
@@ -72,7 +71,7 @@ test-suite criterion-scraper-test
       Paths_criterion_scraper
   hs-source-dirs:
       test
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NoImplicitPrelude OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -85,6 +84,5 @@ test-suite criterion-scraper-test
     , postgresql-simple
     , raw-strings-qq
     , scalpel
-    , sqlite-simple
     , text
   default-language: Haskell2010
