WIP: Add server API

--- a/package.yaml
+++ b/package.yaml
@@ -21,8 +21,10 @@ default-extensions:
   - BlockArguments
   - FlexibleContexts
   - LambdaCase
+  - MultiParamTypeClasses
   - NamedFieldPuns
   - NoImplicitPrelude
+  - RankNTypes
   - RecordWildCards
   - OverloadedStrings
 
