--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: fa747fe933200a17ef4c4d55026a8ff0c4be6d111d1a0dc0df9fc50182fca598
+-- hash: fefde47f3a25b12118d779ca1abaa8fc16c39e58f749973ca34e212994195ae9
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -28,7 +28,7 @@ library
       Paths_criterion_scraper
   hs-source-dirs:
       src
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude RankNTypes RecordWildCards OverloadedStrings
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -48,7 +48,7 @@ executable criterion-scraper
       Paths_criterion_scraper
   hs-source-dirs:
       ./app
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude RankNTypes RecordWildCards OverloadedStrings
   ghc-options: -threaded -O "-with-rtsopts=-N"
   build-depends:
       aeson
@@ -71,7 +71,7 @@ test-suite criterion-scraper-test
       Paths_criterion_scraper
   hs-source-dirs:
       test
-  default-extensions: BlockArguments FlexibleContexts LambdaCase NamedFieldPuns NoImplicitPrelude RecordWildCards OverloadedStrings
+  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude RankNTypes RecordWildCards OverloadedStrings
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
