--- a/criterion-scraper.cabal
+++ b/criterion-scraper.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 25c6b2e0ec10efeac9ae6a6bd3cb0c9ecf59d3c5d31e849acdf796bf7b21a68c
+-- hash: 4007b88302416c5a8d8c59ebdb77bd9eec6c10d39b318b296a23d75363633538
 
 name:           criterion-scraper
 version:        0.1.0.0
@@ -28,20 +28,25 @@ library
       Paths_criterion_scraper
   hs-source-dirs:
       src
-  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables
+  default-extensions: BlockArguments DataKinds FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables TypeOperators
   build-depends:
       aeson
     , base >=4.7 && <5
     , bytestring
     , dotenv
+    , http-client
     , lens
     , mtl
     , postgresql-simple
     , raw-strings-qq
+    , resource-pool
     , scalpel
+    , servant
+    , servant-server
     , text
     , time
     , uuid
+    , warp
   default-language: Haskell2010
 
 executable criterion-scraper
@@ -50,7 +55,7 @@ executable criterion-scraper
       Paths_criterion_scraper
   hs-source-dirs:
       ./app
-  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables
+  default-extensions: BlockArguments DataKinds FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables TypeOperators
   ghc-options: -threaded -O "-with-rtsopts=-N"
   build-depends:
       aeson
@@ -58,14 +63,19 @@ executable criterion-scraper
     , bytestring
     , criterion-scraper
     , dotenv
+    , http-client
     , lens
     , mtl
     , postgresql-simple
     , raw-strings-qq
+    , resource-pool
     , scalpel
+    , servant
+    , servant-server
     , text
     , time
     , uuid
+    , warp
   default-language: Haskell2010
 
 test-suite criterion-scraper-test
@@ -75,7 +85,7 @@ test-suite criterion-scraper-test
       Paths_criterion_scraper
   hs-source-dirs:
       test
-  default-extensions: BlockArguments FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables
+  default-extensions: BlockArguments DataKinds FlexibleContexts LambdaCase MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude OverloadedStrings RankNTypes RecordWildCards ScopedTypeVariables TypeOperators
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -83,12 +93,17 @@ test-suite criterion-scraper-test
     , bytestring
     , criterion-scraper
     , dotenv
+    , http-client
     , lens
     , mtl
     , postgresql-simple
     , raw-strings-qq
+    , resource-pool
     , scalpel
+    , servant
+    , servant-server
     , text
     , time
     , uuid
+    , warp
   default-language: Haskell2010
